Fix animation clipping by adjusting iframe and container sizes

--- a/css/main.css
+++ b/css/main.css
@@ -166,9 +166,25 @@ p.sectionOverview {
 
 #HarlemFrame {
   width: 100%;
-  height: 1698px;
+  height: 1800px;
   border: none;
   display: block;
+  min-height: 1698px;
+}
+
+/* Responsive iframe sizing */
+@media screen and (max-width: 1080px) {
+  #HarlemFrame {
+    height: calc(100vw * 1.57); /* Maintain 1080:1698 aspect ratio */
+    min-height: 800px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #HarlemFrame {
+    height: calc(100vw * 1.8);
+    min-height: 600px;
+  }
 }
 
 
